--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
        <nav>
           <ul class="menu">
           <li><a href="index.html">home</a></li>
-          <li><a href="contatti.html">contatti</a></li>
+          <li><a href="progetti.html">progetti</a></li>
           </ul> 
        </nav>
        <div class="cta">
-          <a href="" class="botton">ciao</a>
+          <a href="" class="botton">Link utili</a>
        </div>
        </div>
 </body>
